[project]
name = "airflow-study"
version = "0.1.0"
description = ""
authors = [
    {name = "MinSeok Oh",email = "minseok.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow (>=2.10.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
