[project]
name = "airflow-study"
version = "0.1.0"
description = ""
authors = [
    {name = "MinSeok Oh",email = "minseok.dev@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "apache-airflow (>=2.10.5,<3.0.0)",
    "apache-airflow-providers-celery (==3.8.5)",
    "apache-airflow-providers-postgres (>=6.1.1,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
